fixed abit of the ui